Fixed bug: Root-font not responsive

--- a/css/index.css
+++ b/css/index.css
@@ -116,7 +116,7 @@ html {
     width: 80rem;
     max-width: 90vw;
     min-width: 280px;
-    height: auto; /* Henrik 70svh */
+    height: auto;
     max-height: 80svh;
 }
 
@@ -170,7 +170,7 @@ html {
 
 @media (min-width: 768px) {
     html {
-        font-size: 1.5*62.5%;
+        font-size: calc(1.5 * 62.5%);
     }
 
     /* Baker */
@@ -184,7 +184,7 @@ html {
 
 @media (min-width: 1024px) {
   html {
-    font-size: 2 * 62.5%;
+    font-size: calc(2 * 62.5%);
   }
 
   /* Baker */
@@ -233,7 +233,7 @@ html {
         font-weight: 700;
         text-wrap: nowrap;
         text-align: center;
-        width: 60%;
+        width: 50%;
         color: var(--primary-color);
         background-color: rgba(0, 0, 0, 0);
         cursor: default;
@@ -254,7 +254,7 @@ html {
     }
 
     .quiz-slider-item:first-of-type {
-        font-size: 8rem;
+        font-size: 6rem;
         color: var(--hover-color);
         cursor: pointer;
         margin-left: 25%;
